# File-Rename

./: .gitignore  CMakeLists.txt  LICENSE  README.md  imgui.ini  input.frename
Doxygen/: Doxyfile
include/: File-Rename.h
src/: File-Rename.cpp  File-Rename.h  main.cpp
test/: CMakeLists.txt  catch2-tests.cpp
